adjust the component loading process

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -17,6 +17,7 @@
         <!-- Add more user info -->
       </div>
       <button (click)="deleteprof()">Delete Bio</button>
+      <button (click)="logout()">Log Out</button>
     </div>
   </section>
 
