--- a/src/app/pages/grades/grades.component.scss
+++ b/src/app/pages/grades/grades.component.scss
@@ -14,4 +14,10 @@
     font-size: large;
     color: rgb(13, 52, 65);
 }
+&.btcon{
+    background-image: linear-gradient(to right top, #227f99, #5194a8, #75a8b8, #97bec9, #b8d3da);
+    color: #031e2e;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
 }
