--- a/src/app/subcomponents/notestaff/notestaff.component.html
+++ b/src/app/subcomponents/notestaff/notestaff.component.html
@@ -1,4 +1,7 @@
 <div class="wrapper">
+  <div class="container d-flex justify-content-center">
+    <a routerLink="/noticestaff" routerLinkActive="active" class="btn btcon btn-primary btn-lg"> Post Notices </a>
+  </div>
     <div class="grid-container justify-content-center mainGrid">
         <div class="grid-item grid-item-1 grids">
             <div class="container d-flex justify-content-center ">
