--- a/src/app/pages/modulecontent/modulecontent.component.scss
+++ b/src/app/pages/modulecontent/modulecontent.component.scss
@@ -31,5 +31,12 @@
         padding-bottom: 10px;
     }
 
+    &.btcon{
+        background-image: linear-gradient(to right top, #227f99, #5194a8, #75a8b8, #97bec9, #b8d3da);
+        color: #031e2e;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+
 
 }
