--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,8 +5,8 @@
     <div class="form-group">
       <label for="userType">I am a:</label>
       <select id="userType" [(ngModel)]="userType" name="userType" required>
-        <option value="student">Student</option>
-        <option value="teacher">Teacher</option>
+        <option value="student" name="student">Student</option>
+        <option value="teacher" name="teacher">Teacher</option>
       </select>
     </div>
     <div class="form-group">
