--- a/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
+++ b/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
@@ -12,9 +12,9 @@
             <div class="mb-3">
               <label for="materialType" class="form-label">Material Type</label>
               <select id="materialType" [(ngModel)]="formData.materialType" name="materialType" required>
-                <option value="lecnote">Lec Notes</option>
-                <option value="assignment">Assignment</option>
-                <option value="labsheet">Lab Materials</option>
+                <option value="lecnote" name="lecnote">Lec Notes</option>
+                <option value="assignment" name="lecnote">Assignment</option>
+                <option value="labsheet" name="lecnote">Lab Materials</option>
               </select>
             </div>
             <div class="mb-3">
