--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="container d-flex justify-content-center">
         <img src="../../../assets/nlearnlogo.png" width="150px" height="110px">
-        <p class="welcome"> Welcome Back User123!</p>
+        <p class="welcome"> Welcome {{loginService.accID}} !</p>
     </div>
     <div class="grid-container justify-content-center mainGrid">
         <div class="grid-item grid-item-1 grids">
